syntax = "proto2";

import "message-parts.proto";

package blockchain.proto.protobuf;
option java_package = "io.scalechain.blockchain.proto.protobuf";
option optimize_for = SPEED;

message RecordLocator {
    required int64 offset = 1;
    required int32 size = 2;
}

message FileRecordLocator {
    required int32 fileIndex = 1;
    required RecordLocator recordLocator = 2;
}

message BlockFileInfo {
    required int32 blockCount = 1;
    required int64 fileSize = 2;
    required int64 fistBlockHeight = 3;
    required int64 lastBlockHeight = 4;
    required int64 firstBlockTimestamp = 5;
    required int64 lastBlockTimestamp = 6;
}



message BlockInfo {
    required int64 height = 1;
    required int64 chainWork = 2;
    optional Hash nextBlockHash = 3;
    required int32 transactionCount = 4;
    required int32 status = 5;
    required BlockHeader blockHeader = 6;
    optional FileRecordLocator blockLocatorOption = 7;
}




message FileNumber {
    required int32 fileNumber = 1;
}



message OneByte {
    required int32 value = 1;
}



message TransactionCount {
    required int32 count = 1;
}


message BlockHeight {
    required int64 blockHeight = 1;
}

message TransactionDescriptor {
    required FileRecordLocator transactionLocator = 1;
    required int64 blockHeight = 2;
    repeated OptionalInPoint outputsSpentBy = 3;
}



message OrphanBlockDescriptor {
    required Block block = 1;
}



message OrphanTransactionDescriptor {
    required Transaction transaction = 1;
}



message TransactionPoolEntry {
    required Transaction transaction = 1;
    repeated OptionalInPoint outputsSpentBy = 2;
}
